protox/src/parse/snapshots/protox__parse__tests__parse_enum-10.snap
---
source: src/parse/tests.rs
expression: "if parser.lexer.extras.errors.is_empty() {\n        Ok(result.unwrap())\n    } else { Err(parser.lexer.extras.errors) }"
---
Err(
    [
        UnexpectedToken {
            expected: "an identifier, '}', 'reserved' or 'option'",
            found: "]",
            span: 10..11,
        },
    ],
)
